--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-api"
   ],
   "dependencies": {
+    "@frida/node-abi": "^3.29.1-frida.0",
     "cmake-js": "~6.3.2",
     "detect-libc": "^2.0.0",
     "each-series-async": "^1.0.1",
@@ -30,7 +31,6 @@
     "glob": "^8.0.3",
     "minimist": "^1.1.2",
     "napi-build-utils": "^1.0.1",
-    "node-abi": "^3.0.0",
     "node-gyp": "^9.1.0",
     "node-ninja": "^1.0.1",
     "noop-logger": "^0.1.0",
